Fixed the terrible mobile whitespacing issue. Needed an overflow-x hidden. Man that took me forever!

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -215,12 +220,19 @@ a {
 
 /* ----------------- Grid ----------------- */
 
-.column-one, .column-two-even, .column-two-left-third, .column-two-left-forth, .column-two-right-third, .column-two-right-forth, .column-three-even, .column-four-even {
+.column-one, 
+.column-two-even, 
+.column-two-left-third, 
+.column-two-left-forth, 
+.column-two-right-third, 
+.column-two-right-forth, 
+.column-three-even, 
+.column-four-even 
+{
   display: grid;
   /* border: 1px solid green; */
   padding: 3rem 0;
   width: 100%;
-  position: relative;
 }
 
 .column-two-even {
@@ -256,6 +268,7 @@ a {
   grid-column-end: 6;
   justify-self: center;
   text-align: center;
+    /* border: 1px solid purple; */
 }
 
 .column-two-left-third {
@@ -283,6 +296,11 @@ a {
 }
 
 /* ----------------- Timeline ----------------- */
+.timeline-container {
+  height: 100%;
+  width: 100%;
+}
+
 .timeline-element
 {
   color: var(--light-main);
@@ -316,11 +334,10 @@ a {
 
 /* ----------------- gsap ----------------- */
 
-/* .right-to-left-incoming { */
-  /* transform: translateX(200px); */
-  /* left: 200px; */
-  /* opacity: 0; */
-/* } */
+.container { 
+  overflow-x: hidden !important;
+
+}
 
 
 /* ----------------- Charts ----------------- */
